--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>BoxGo — проверка посылок</title>
-  <meta name="description" content="BoxGo — служба доставки. Проверьте свои посылки по ФИО и номеру телефона. Данные не сохраняются и не отправляются." />
+  <meta name="description" content="BoxGo — служба доставки. Проверьте свои посылки по ФИО и номеру телефона." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -90,7 +90,7 @@
     <section class="hero">
       <div>
         <h1>Служба доставки <span style="color:var(--brand-2)">BoxGo</span></h1>
-        <p>Надёжная доставка по всей стране: курьеры, постаматы, пункты выдачи. Отслеживайте отправления по телефону и ФИО. <strong>Данные не сохраняются и не отправляются</strong> — используются только локально для имитации проверки.</p>
+        <p>Надёжная доставка по всей стране: курьеры, постаматы, пункты выдачи. Отслеживайте отправления по телефону и ФИО. <strong></p>
 
         <div id="form" class="card form-card" role="form" aria-labelledby="check-title">
           <div class="row">
