--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     .step.done .dot{background:#10b981}
     .step.active .dot{background:#f59e0b}
     .gov-note{margin-top:14px;padding:10px 12px;border-radius:12px;background:#0c1a33;border:1px solid rgba(255,255,255,.06);font-size:12px;color:#b9c6db}
+    @media (max-width: 900px){ .hero{grid-template-columns:1fr;gap:16px} .features,.reviews{grid-template-columns:1fr} }
     @media (max-width: 560px){
   header .nav{
     display: grid;
@@ -79,7 +80,7 @@
   .cta .btn{
     padding: 10px 14px;
     font-size: 13px;
-    white-space: nowrap; /* не переносить текст внутри кнопки */
+    white-space: nowrap; /* не переносить текст */
   }
 }
   </style>
