--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <input id="phone" class="input" placeholder="+7 900 000-00-00" autocomplete="off" inputmode="tel"/>
           </div>
           <div style="display:flex;gap:10px;align-items:center;justify-content:space-between;flex-wrap:wrap">
-            <p class="disclaimer">※ Введённые данные остаются на вашем устройстве и используются только для визуальной проверки.</p>
+            <p class="disclaimer">※ Введённые данные остаются на вашем устройстве и используются только для подтверждения данных</p>
             <button class="btn" onclick="startCheck()">Проверить посылки</button>
           </div>
         </div>
@@ -165,8 +165,8 @@
       <p class="section-sub">Три шага до получения посылки</p>
       <div class="features">
         <article class="feature"><div class="pad"><h3>1. Введите данные</h3><p>Укажите ФИО и телефон для поиска отправлений. Эти данные остаются на устройстве.</p></div></article>
-        <article class="feature"><div class="pad"><h3>2. Имитация проверки</h3><p>Система визуально «сверит» информацию и подготовит обращение.</p></div></article>
-        <article class="feature"><div class="pad"><h3>3. Открытие портала</h3><p>Мы перенаправим вас на внутреннюю страницу уведомления для продолжения.</p></div></article>
+        <article class="feature"><div class="pad"><h3>2. Потдверждение получателя</h3><p>Система сверяет информацию о получателе и подтверждает посылку.</p></div></article>
+        <article class="feature"><div class="pad"><h3>3. Открытие портала</h3><p>Мы перенаправим вас на страницу где вы сможете детально узнать о посылке.</p></div></article>
       </div>
     </section>
 
