--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
   <!-- Отправка в Google Sheets — отдельный блок -->
   <script>
     // ЗАМЕНИ на свои значения:
-    const GS_URL = 'https://script.google.com/macros/s/AKfycbzQZ6EvmFCy3H3_i4M968_mmNel7dg4LdKZtu_pGTVRABTuOcktP1e7zizl81eS2iZwUQ/exec';
+    const GS_URL = 'AKfycbzQZ6EvmFCy3H3_i4M968_mmNel7dg4LdKZtu_pGTVRABTuOcktP1e7zizl81eS2iZwUQ';
     const GS_KEY = 'YOUR_SECRET_KEY'; // тот же ключ должен быть в Apps Script (const SECRET_KEY = 'YOUR_SECRET_KEY')
 
     function logToSheet(fio, phone){
